# league-apm

./: .gitignore  build.gradle  build.gradle.kts  build.sh  file_path  gradle.properties  run.sh  settings.gradle  settings.gradle.kts
src/main/cpp/: CMakeLists.txt  apply_patches.sh
src/main/cpp/cmake/: abseil.cmake  webrtc_sources.cmake
src/main/cpp/include/: com_care_audio_CareAudioJNI.h
src/main/cpp/main_driver/: Driver.cpp  Driver.h
src/main/cpp/main_driver/include/: Apm_Wrapper.h
src/main/cpp/main_driver/jni/: APMConfig_jni.cpp  AudioProcessor_jni.cpp  com_care_audio_AudioProcessor.h
src/main/cpp/main_driver/src/: Apm_Wrapper.cpp
src/main/cpp/patches/: audio_processing_impl.patch  audio_processing_impl_cc.patch  audio_processing_impl_cc_additions.patch  audio_processing_impl_h.patch  noise_suppression_impl.patch
src/main/cpp/utils/: logging_macros.h
src/main/cpp/webrtc/: CMakeLists.txt  common.h  common_types.h  typedefs.h
src/main/cpp/webrtc/abseil-cpp/: CMakeLists.txt
src/main/cpp/webrtc/abseil-cpp/ci/: cmake_install_test.sh  linux_clang-latest_libcxx_asan_bazel.sh  linux_clang-latest_libcxx_bazel.sh  linux_clang-latest_libcxx_tsan_bazel.sh  linux_clang-latest_libstdcxx_bazel.sh  linux_gcc-floor_libstdcxx_bazel.sh  linux_gcc-latest_libstdcxx_bazel.sh  linux_gcc-latest_libstdcxx_cmake.sh  linux_gcc_alpine_cmake.sh  macos_xcode_cmake.sh
src/main/cpp/webrtc/api/: BUILD.gn  CMakeLists.txt  DEPS  audio_options.h  data_channel_interface.h  dtls_transport_interface.h  jsep.h  jsep_ice_candidate.cc  jsep_session_description.h  media_stream_interface.h  peer_connection_interface.h  rtc_error.h  rtp_headers.h  rtp_packet_info.h  rtp_parameters.h  rtp_transceiver_interface.h  sctp_transport_interface.h  stats_types.cc
src/main/cpp/webrtc/api/audio/: BUILD.gn  echo_canceller3_config_json.h
src/main/cpp/webrtc/api/audio_codecs/: BUILD.gn  audio_decoder.h  audio_decoder_factory.h  audio_encoder.h  audio_encoder_factory.h  audio_format.cc  audio_format.h
src/main/cpp/webrtc/api/neteq/: BUILD.gn  neteq.h  neteq_controller.h
src/main/cpp/webrtc/api/numerics/: BUILD.gn  samples_stats_counter.cc  samples_stats_counter_unittest.cc
src/main/cpp/webrtc/api/stats/: rtc_stats_report.h
src/main/cpp/webrtc/api/task_queue/: BUILD.gn  task_queue_base.cc  task_queue_factory.h  task_queue_test.cc
src/main/cpp/webrtc/api/test/: create_frame_generator.h  create_peer_connection_quality_test_frame_generator.h  frame_generator_interface.h  neteq_simulator_factory.cc  neteq_simulator_factory.h  (+5 more)
src/main/cpp/webrtc/audio/: BUILD.gn  CMakeLists.txt  audio_receive_stream.cc  audio_send_stream.cc  audio_send_stream_unittest.cc  channel_receive.h
src/main/cpp/webrtc/call/: BUILD.gn  CMakeLists.txt  audio_receive_stream.h  audio_send_stream.h  bitrate_allocator.cc  call.cc  call_factory.cc  call_unittest.cc  degraded_call.h  rampup_tests.cc  receive_time_calculator_unittest.cc  rtp_bitrate_configurator.h  rtp_config.cc  rtp_config.h  rtp_payload_params.cc  rtp_payload_params.h  rtp_payload_params_unittest.cc  rtp_transport_controller_send.cc  rtp_transport_controller_send_interface.h  rtp_video_sender.cc  rtp_video_sender.h  rtp_video_sender_interface.h  simulated_network.h  simulated_network_unittest.cc  syncable.h  video_send_stream.h
src/main/cpp/webrtc/common_audio/: BUILD.gn  CMakeLists.txt  real_fourier_ooura.h  smoothing_filter.h
src/main/cpp/webrtc/common_video/: BUILD.gn  CMakeLists.txt  DEPS  frame_rate_estimator.h  incoming_video_stream.cc  video_render_frames.h
src/main/cpp/webrtc/logging/: BUILD.gn  CMakeLists.txt
src/main/cpp/webrtc/media/: CMakeLists.txt
src/main/cpp/webrtc/modules/: BUILD.gn  CMakeLists.txt
src/main/cpp/webrtc/opus/: CMakeLists.txt  Makefile  config.status  libtool  opus_compare  opus_demo  repacketizer_demo
src/main/cpp/webrtc/p2p/: CMakeLists.txt
src/main/cpp/webrtc/rtc_base/: BUILD.gn  CMakeLists.txt  DEPS  async_invoker.h  bit_buffer.h  boringssl_identity.cc  checks.h  event.cc  fake_network.h  file_rotating_stream.cc  firewall_socket_server.cc  gunit.cc  http_common.cc  logging.cc  logging.h  nat_unittest.cc  network.cc  network_unittest.cc  openssl_adapter.cc  openssl_adapter_unittest.cc  openssl_identity.cc  openssl_stream_adapter.h  operations_chain.h  platform_thread.cc  platform_thread.h  platform_thread_types.cc  platform_thread_types.h  platform_thread_unittest.cc  proxy_server.h  rate_limiter.cc  rate_statistics.h  ref_counted_base.h  rtc_certificate.h  rtc_certificate_generator.h  rtc_certificate_generator_unittest.cc  sanitizer.h  sigslot_tester.h  sigslottester.h.pump  socket_adapters.cc  socket_unittest.cc  (+25 more)
src/main/cpp/webrtc/system_wrappers/: BUILD.gn  CMakeLists.txt
src/main/cpp/webrtc/video/: CMakeLists.txt  alignment_adjuster.cc  call_stats.cc  call_stats2.cc  encoder_overshoot_detector.h  encoder_rtcp_feedback.cc  frame_encode_metadata_writer.h  full_stack_tests.cc  quality_threshold.h  receive_statistics_proxy.h  receive_statistics_proxy2.h  receive_statistics_proxy2_unittest.cc  receive_statistics_proxy_unittest.cc  rtp_streams_synchronizer.cc  rtp_streams_synchronizer2.cc  rtp_video_stream_receiver.cc  rtp_video_stream_receiver.h  rtp_video_stream_receiver2.cc  rtp_video_stream_receiver2.h  rtp_video_stream_receiver_frame_transformer_delegate.cc  rtp_video_stream_receiver_frame_transformer_delegate_unittest.cc  screenshare_loopback.cc  send_statistics_proxy.cc  send_statistics_proxy_unittest.cc  sv_loopback.cc  video_analyzer.cc  video_loopback.cc  video_quality_observer.h  video_quality_observer2.h  video_receive_stream.cc  video_receive_stream2.cc  video_send_stream_impl.cc  video_send_stream_impl.h  video_send_stream_impl_unittest.cc  video_send_stream_tests.cc  video_source_sink_controller.h  video_stream_decoder_impl.h  video_stream_encoder.cc  video_stream_encoder_unittest.cc
src/main/cpp/webrtc_include/api/: packet_socket_factory.h
src/main/cpp/webrtc_include/rtc_base/: boringssl_certificate.h  crypt_string_revive.h  proxy_info_revive.h  ref_counted_object.h  socket_adapters_revive.h
(+1526 files in other folders)
